@@ -196,8 +196,10 @@ latter.
 <p><li><b>Rules.</b>  The rule package has been woefully underutilized.  I had
 expected to use it a lot, but so far haven't much. 
 
+<!--
 <p><li><b>Teambots.</b>  Who <i>doesn't</i> complain about having to remove the teambots 
 package in order to successfully compile ECJ under Eclipse or Netbeans?
+-->
 
 <p><li><b>Fitness.</b>  Our definition of Fitness was highly vague on purpose.  Is a
 high number better?  Is a low number better?  Are there more than one
